--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mediaproxy-router"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Åke Amcoff <ake.amcoff@gmail.com>"]
 edition = "2018"
 
@@ -11,6 +11,6 @@ actix-rt = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = "2"
-url = "2"
-reqwest = { version = "0.10", features = ["blocking"] }
+http = "0.2"
 mediaproxy-common = "0.1"
+futures = "0.3"
