Fix CI (maybe?)

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -150,6 +150,7 @@ jobs:
         with:
           repository: ThePicoNerd/mediaproxy
           ref: develop
+          token: ${{ secrets.CHART_REPO_TOKEN }}
 
       - name: Install yq
         uses: mikefarah/yq@3.3.2
